--- a/_posts/2019-07-01-the-us-narrative-today.html
+++ b/_posts/2019-07-01-the-us-narrative-today.html
@@ -2704,107 +2704,107 @@ stories:
   domain: http://www.statesboroherald.com/
   link: https://www.statesboroherald.com/local/three-bulloch-honored-georgia-boys-state/
 images:
-- name: window-window-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-kand-two.jpg
-- name: berlinwall2-berlinwall-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-yellow-collage.jpg
-- name: catacombs-catacombs-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-jap-dys-1.jpg
-- name: old-church-oldchurch-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-ww2-color.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-aqua.jpg
-- name: crow-crow-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-blue-granite.jpg
-- name: containership-containership-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-electricity.jpg
-- name: blossombar-clean-view-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-clean-view-file-00-00-00-00.jpg
-- name: udnie-IMG_7288.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_7288.jpg
-- name: downtown-trucksilo-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-deep-connections.jpg
-- name: gears-4882162452-fa3126b38d-b-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-kand-two.jpg
-- name: downtown-trucksilo-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-purp-paper.jpg
-- name: statue-of-liberty-front-view-statueofliberty-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-post-modern.jpg
-- name: art-museum-art-museum-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-pablo-blue.jpg
-- name: bordercrossing-bordercrossing-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-purp-paper.jpg
-- name: beach-clouds-lifeguard-beachclouds-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-atari-asteroids.jpg
-- name: aws-s3-stories-new-machine-road-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-machine-road-atari-missle.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-constitution.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-constitution.JPG
-- name: aws-s3-square-file-00-00-00-00-smith-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-file-00-00-00-00-smith-square.jpg
-- name: berlinwall2-berlinwall-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-sand-paper.jpg
-- name: mosaic-face-mosaic-face-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-wols.jpg
-- name: old-church-oldchurch-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-atari-asteroids.jpg
-- name: blossombar-dark-soul-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dark-soul-file-00-00-50-62.jpg
-- name: containership-containership-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-sunday.jpg
-- name: art-museum-art-museum-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-copper-circuit-2.jpg
-- name: udnie-P8210043.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-P8210043.jpg
-- name: supreme-court-supremecourt-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-dark-soul.jpg
-- name: san-francisco-street-view-san-francisco-street-view-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-alberto-giacometti.jpg
-- name: school-clouds-church-clouds-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-crabapple.jpg
-- name: legal-statue-legalstatue-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-crafty-painting.jpg
-- name: blossombar-bright-sand-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-bright-sand-file-00-00-00-00.jpg
-- name: blossombar-blue-brush-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blue-brush-file-00-00-00-00.jpg
-- name: san-francisco-street-view-san-francisco-street-view-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-post-modern.jpg
-- name: ellis-island-ellis-island-room.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room.jpg
-- name: catacombs-catacombs-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-colored-circuits.jpg
-- name: walled-garden-walled-garden-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-sunday.jpg
-- name: old-barn-old-barn-1500-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-hot-spicy.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-gan-vogh.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-gan-vogh.JPG
-- name: fence-mexico-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-constitution.jpg
-- name: downtown-trucksilo-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-smoking-cigarette.jpg
-- name: oldhouse-oldhouse-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-umberto-bocc.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-attack-planes.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-attack-planes.JPG
-- name: school-clouds-church-clouds-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-pablo-blue.jpg
-- name: gypsymosaic-gypsy-eyes-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-aqua.jpg
-- name: subway-subway-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-dali-three.jpg
-- name: status-berlin-status-berlin-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-crunch-paper.jpg
-- name: oldhouse-granaryfield-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-bright-sand.jpg
-- name: store-on-corner-store-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-nazi-poster.jpg
-- name: border-crossing-bordercrossing-alien-goggles.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-alien-goggles.png
-- name: power-lines-power-lines-empty-space-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-matrix.jpg
-- name: copper-circuit-IMG_1184.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_1184.jpg
+- name: udnie-DSC_0007.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0007.jpg
+- name: berlinwall-DSC-0084-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-ww2-color.jpg
+- name: sand-hand-sand-hand-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-cinnamon-rolls.jpg
+- name: trucksilo-trucksilo-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-colorful-blocks.jpg
+- name: death-valley-death-valley-national-park-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-crafty-painting.jpg
+- name: fence-mexico-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-ww2-dresden.jpg
+- name: oldbarn-oldbarn-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-umberto-bocc.jpg
+- name: oldsmallboat-oldsmallboat-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-aqua.jpg
+- name: dc-statue-dcstatue-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-cinnamon-rolls.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-ww2-color.jpg
+- name: border-crossing-bordercrossing-clean-view.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-clean-view.png
+- name: curtain-curtain-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-blue-brush.jpg
+- name: gypsy-wagon-gypsywagon-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-internet-numbers.jpg
+- name: mediterranean-mediterranean-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-yellow-collage.jpg
+- name: amusement-park-amusement-park-2-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-emily-carr.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-purp-paper.jpg
+- name: adam-smith-adam-smith-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-dark-dali.jpg
+- name: stories-36349140070-d5ec39cb34-z.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-36349140070-d5ec39cb34-z.jpg
+- name: old-church-oldchurch-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-pablo-blue.jpg
+- name: server-cloud1-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-copper-circuit.jpg
+- name: trucksilo-trucksilo-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-dry-skin.jpg
+- name: old-door-lock-old-door-lock-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-monet-one.jpg
+- name: adam-smith-adam-smith-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-wols.jpg
+- name: downtown-trucksilo-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-rainbow-festival.jpg
+- name: mosaic-face-mosaic-face-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-blue-electricity.jpg
+- name: locked-up-steam-lock-up-steam-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-granite.jpg
+- name: powerlines-power-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-pablo-blue.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-colorful-blocks.jpg
+- name: aws-s3-stories-carryload-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-carryload-diego-rivera1.jpg
+- name: gypsymosaic-gypsy-eyes-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-spagetti-accident.jpg
+- name: old-door-lock-old-door-lock-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-neo-instinct.jpg
+- name: berlinwall-DSC-0084-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-creativity.jpg
+- name: adam-smith-adam-smith-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-graham-sutherland.jpg
+- name: border-crossing-bordercrossing-mucha-mult.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-mucha-mult.png
+- name: machine-road-machine-road-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-green-zuma.jpg
+- name: ellis-island-ellisisland-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-crunch-paper.jpg
+- name: abandonedbuildings_gred_mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_gred_mash.jpg
+- name: sand-hand-sand-hand-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-copper-circuit.jpg
+- name: aws-s3-square-christianity-under-construction-copper-circuit-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-christianity-under-construction-copper-circuit-square.jpg
+- name: statue-of-liberty-front-view-statueofliberty-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-yellow-collage.jpg
+- name: gypsymosaic-gypsy-eyes-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-atari-asteroids.jpg
+- name: powerlines-power-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-light-dali.jpg
+- name: crow_deep_connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_deep_connections.jpg
+- name: power-lines-power-lines-empty-space-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-plentiful.jpg
+- name: dc-statue-dcstatue-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-gan-vogh.jpg
+- name: carry-load-carryload-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-blue-electricity.jpg
+- name: bordercrossing-bordercrossing-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-crafty-painting.jpg
+- name: beach-rocks-beach-rocks-currents-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-sand-paper.jpg
+- name: stories-new-79-110-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-79-110-800-500-0-max-0--5--1.jpg
+- name: subway-subway-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-gred-mash.jpg
+- name: scream-IMG_8494.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8494.jpg
 ---
 Protests Escalate As Hong Kong Marks Handover To China.&nbsp;Tortello Opens Monday, Bringing Handmade Pasta To Wicker Park, Plus More Dining News.&nbsp;Evers Signs Bill Extending Youth Prison Closure Deadline.&nbsp;Council Names Citizens To Fill Local Boards.&nbsp;Escape To The Natural State.&nbsp;Egan Bernal Set To Impress At Unpredictable Tour De France.&nbsp;Grant Supports Pregnant And Parenting Moms.&nbsp;Towns In Six Vermont Counties Now Eligible For Federal Aid For Flooding Damage.&nbsp;
